base/metrics-server/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server
  namespace: metrics-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
  ingress:
  # Webhook
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  egress:
  # DNS
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
